忘记密码和注册功能新增